# tailscale-systray

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  tailscale-systray.desktop
.github/workflows/: release.yml
json/: prefs_needs_login.json  status_needs_login.json  status_running.json  status_starting.json
src/: command_history.rs  installation.rs  main.rs  namespaces.rs  ns_launcher.rs  systemd.rs  tailscale.rs  xdg.rs
