[package]
name = "tailscale-systray"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
arboard = { version = "3.4.1", features = [] }
clap = { version = "4.5.32", features = ["color", "help", "std", "derive"] }
ksni = "0.3.1"
notify-rust = { version = "4.11.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["rt"] }
users = "0.11.0"
