[package]
name = "tailscale-systray"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Application Indicator (SNI) for Tailscale"
homepage = "https://github.com/cataphract/tailscale-systray"
repository = "https://github.com/cataphract/tailscale-systray"
keywords = ["tailscale", "vpn", "network", "systray", "linux"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
arboard = { version = "3.4", features = [] }
clap = { version = "4.5", features = ["color", "help", "std", "derive"] }
env_logger = { version = "0.11", features = [] }
futures-util = "0.3.31"
ksni = "0.3"
log = { version = "0.4", features = [] }
netlink-sys = { version = "0.8.7", features = ["tokio"] }
nftnl = "0.8.0"
nix = { version = "0.30.1", features = ["socket", "user", "process", "mount", "sched", "fs"] }
notify-rust = { version = "4.11", features = [] }
rtnetlink = "0.18.1"
rust-embed = "8.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1"
tokio = { version = "1.44", features = ["rt"] }
users = "0.11"
zbus = { version = "5.11", default-features = false }
